Favorite Player
+ fixed startup and logging problems
+ clear favorite and select fields for player selection
+ update spring and vaadin verion